--- a/index.html
+++ b/index.html
@@ -984,7 +984,7 @@
 
         <!-- Footer Bottom Section -->
         <div class="footer-bottom">
-            <p>&copy; 2025 Your Website. All Rights Reserved.</p>
+            <p>&copy; 2025 PBlog. All Rights Reserved.</p>
         </div>
     </footer>
 
